# miniondesk

./: .env.example  .gitignore  ARCHITECTURE.md  CHANGELOG.md  Makefile  README.md  RELEASE.md  SECURITY.md  docker-compose.yml  host.Dockerfile  pyproject.toml  run.py
.github/workflows/: ci.yml
container/: Dockerfile  requirements.txt
container/runner/: requirements.txt  runner.py  soul.md
container/runner/providers/: __init__.py  auto.py  claude.py  gemini.py  openai_compat.py
container/runner/tools/: __init__.py  email_tools.py  enterprise.py  filesystem.py  hpc.py  integrations.py  messaging.py  nas.py
docs/: ic-design-spec.md
groups/example-group/: CLAUDE.md
groups/global/: CLAUDE.md
host/: admin.py  allowlist.py  config.py  dashboard.py  db.py  health.py  immune.py  ipc.py  logger.py  main.py  queue.py  ratelimit.py  runner.py  scheduler.py  sdk_api.py  validate.py  webportal.py  ws_bridge.py
host/channels/: __init__.py  discord.py  matrix.py  teams.py  telegram.py  web.py
host/enterprise/: __init__.py  calendar.py  confluence.py  dept_init.py  dept_router.py  email.py  jira_webhook.py  knowledge_base.py  ldap.py  nas.py  notes_mail.py  rbac.py  weekly_report.py  workflow.py
host/identity/: __init__.py  agent_identity.py  bot_registry.py
host/memory/: __init__.py  compound.py  hot.py  memory_bus.py  search.py  summarizer.py  warm.py
host/memory_bus/: __init__.py  memory_bus.py
knowledge/ic_design/: eda_troubleshooting.md  env_setup.md  hpc_guide.md  security_compliance.md
miniondesk/: __init__.py  run.py
miniondesk/host/: __init__.py  config.py  dashboard.py  db.py  dev_engine.py  evolution.py  immune.py  ipc.py  main.py  queue.py  runner.py  scheduler.py  skills_engine.py
miniondesk/host/channels/: __init__.py  discord.py  (+2 more)
minions/: bob.md  kevin.md  mini.md  phil.md  stuart.md
setup/: __init__.py  setup.py
skills/brainstorming/: manifest.yaml
skills/planning/: manifest.yaml
skills/subagent-delegation/: manifest.yaml
skills/systematic-debugging/: manifest.yaml
skills/verification/: manifest.yaml
skills/web-search/: manifest.yaml
tests/: test_config.py  test_dept_router.py  test_knowledge_base.py  test_scheduler.py
vscode-extension/: README.md  package.json
vscode-extension/src/: extension.ts
workflows/: expense_report.yaml  it_ticket.yaml  leave_request.yaml
(+19 files in other folders)
